Working on examples.

--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "source": [
     "## Multi-level Models vs. Instances\n",
-    "It is essential to understand that the library classes represent the S3Model Reference Model. The instances of these classes express constraints on those classes. These constraints define a specific model that is identified by a Collision-resistant unique identifier (CUID). Once defined, these models are immutable under the guidelines of S3Model. Since shareability is a cornerstone of the S3Model approach these models can be serialized to a XML Schema.\n",
+    "It is essential to understand that these library classes represent the S3Model Reference Model (RM). The instances of these classes express constraints on those RM classes. These constraints define a specific model that is identified by a *collision-resistant unique identifier* (CUID). Once defined, these models are immutable under the guidelines of S3Model. Since shareability is a cornerstone of the S3Model approach these models can be serialized to a XML Schema making them easily shareable across all platforms.\n",
     "\n",
     "In the tutorials linked here, we are building only model components one at a time and not as part of a complete data model. An advanced tutorial as well as documentation for Kunteksto and the Infotropic Tools Suite describe creating complete, functional data models. "
    ]
@@ -79,6 +79,13 @@
    "metadata": {},
    "source": [
     "5. [XdOrdinalType](XdOrdinal%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. [XdCountType](XdCount%20Examples.ipynb)"
    ]
   },
   {
