--- a/RM/3_1_0/notebooks/XdCount Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdCount Examples.ipynb
@@ -19,12 +19,12 @@
     }
    },
    "source": [
-    "**Set the path to the folder containing the library files and import the extended datatype.**"
+    "**Set the path to the folder containing the library files and import the extended datatypes.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -65,11 +65,17 @@
       "Help on class XdCountType in module s3m_xdt:\n",
       "\n",
       "class XdCountType(XdQuantifiedType)\n",
-      " |  XdCountType(label)\n",
+      " |  XdCountType(label: str)\n",
       " |  \n",
-      " |  Countable quantities. Used for countable types such as pregnancies and steps (taken by a physiotherapy patient), \n",
-      " |  number of cigarettes smoked in a day, etc. The thing(s) being counted must be represented in the units element. \n",
-      " |  Misuse: Not used for amounts of physical entities which all have standardized units as opposed to physical things counted.\n",
+      " |  Countable quantities as an integer. \n",
+      " |  \n",
+      " |  Used for countable types such as pregnancies or steps taken by a \n",
+      " |  physiotherapy patient, number of cigarettes smoked in a day, etc. \n",
+      " |  \n",
+      " |  The thing(s) being counted must be represented in the units element.\n",
+      " |  \n",
+      " |  Misuse: Not used for amounts of physical entities which all have \n",
+      " |  standardized units as opposed to physical things counted.\n",
       " |  \n",
       " |  Method resolution order:\n",
       " |      XdCountType\n",
@@ -81,14 +87,32 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, label)\n",
+      " |  __init__(self, label: str)\n",
       " |      The semantic label (name of the model) is required.\n",
+      " |  \n",
+      " |  asXML(self)\n",
+      " |      Return an example XML fragment for this model.\n",
       " |  \n",
       " |  asXSD(self)\n",
       " |      Return a XML Schema complexType definition.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  max_exclusive\n",
+      " |      An exclusive maximum value.\n",
+      " |  \n",
+      " |  max_inclusive\n",
+      " |      An inclusive maximum value.\n",
+      " |  \n",
+      " |  min_exclusive\n",
+      " |      An exclusive minimum value.\n",
+      " |  \n",
+      " |  min_inclusive\n",
+      " |      An inclusive minimum value.\n",
+      " |  \n",
+      " |  total_digits\n",
+      " |      A maximum total digits constraint.\n",
       " |  \n",
       " |  xdcount_units\n",
       " |      The name or type of the items counted. Examples are cigarettes, drinks, pregnancies, episodes, etc. \n",
@@ -117,12 +141,6 @@
       " |      MagnitudeStatus provides a general indication of the accuracy of the magnitude expressed in the XdQuantified \n",
       " |      subtypes. Should be used to inform users and not for decision support uses.\n",
       " |      Must be one of: None,'equal','less_than', 'greater_than', 'less_than_or_equal', 'greater_than_or_equal', 'approximate'\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from XdOrderedType:\n",
-      " |  \n",
-      " |  asXML(self)\n",
-      " |      Return an example XML fragment for this model.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from XdOrderedType:\n",
@@ -163,6 +181,8 @@
       " |  \n",
       " |  acuid\n",
       " |      The unique identifier of the wrapping XdAdapter of the component.\n",
+      " |  \n",
+      " |  adapter\n",
       " |  \n",
       " |  cardinality\n",
       " |      The cardinality status values. \n",
@@ -262,39 +282,235 @@
     }
    },
    "source": [
-    "Create a XdCount instance. We must provide a *label* "
+    "Create a XdCount instance. We must provide a *label* as per all Xd Types. We also need a units object which is a XdStringType. Usually the modeler will provide a selection of options for the end-user to choose from when selecting a units value. With XdCountTypes though there is often only one type of unit allowed. In our contrived model here we will count widgets and they can be recorded in individuals, dozens or cases. This is so you can see the flexibility in modeling. The word *cases* will only make sense if you provide context; how many widgets are in a case?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdCountType : Steps Taken, ID: cjn2iuxc50002e88p2q7hgas3\n"
+      "('individuals', 'https://s3model.com/widget/units#individuals')\n",
+      "('dozens', 'https://s3model.com/widget/units#dozens')\n",
+      "('cases', 'https://s3model.com/widget/units#cases')\n",
+      "XdCountType : Widgets Count, ID: cjn38t3dk0002yv8pfjjzf26j\n"
      ]
     }
    ],
    "source": [
-    "u = XdStringType('Number of steps')\n",
+    "# create the units model\n",
+    "u = XdStringType('Widgets Units')\n",
+    "u.docs = \"Flag the number of widgets by individuals, dozens or cases.\"\n",
+    "u.definition_url = 'https://s3model.com/widget/units'\n",
+    "# create the units options\n",
+    "enums = []\n",
+    "enums.append(('individuals', 'https://s3model.com/widget/units#individuals'))\n",
+    "enums.append(('dozens', 'https://s3model.com/widget/units#dozens'))\n",
+    "enums.append(('cases', 'https://s3model.com/widget/units#cases'))\n",
+    "u.enums = enums\n",
     "\n",
-    "d = XdCountType(\"Steps Taken\")\n",
-    "d.docs = \"The number of steps taken per day.\"\n",
+    "# this is not used inside a Cluster, it is a units in a XdCount. Do not create an adapter\n",
+    "u.adapter = False\n",
+    "\n",
+    "# now the count model\n",
+    "d = XdCountType(\"Widgets Count\")\n",
+    "d.docs = \"Record the number of widgets in inventory.\"\n",
+    "d.xdcount_units = u\n",
     "print(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  \n",
+      "<xs:element name=\"ms-cjn38t3dk0003yv8pd6328r08\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjn38t3dk0003yv8pd6328r08\"/>\n",
+      "  <xs:complexType name=\"mc-cjn38t3dk0003yv8pd6328r08\">\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjn38t3dk0002yv8pfjjzf26j\"/>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "  <xs:element name=\"ms-cjn38t3dk0002yv8pfjjzf26j\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjn38t3dk0002yv8pfjjzf26j\"/>\n",
+      "  <xs:complexType name=\"mc-cjn38t3dk0002yv8pfjjzf26j\">\n",
+      "    <xs:annotation>\n",
+      "      <xs:documentation>\n",
+      "        Record the number of widgets in inventory.\n",
+      "      </xs:documentation>\n",
+      "      <xs:appinfo>\n",
+      "        <rdfs:Class rdf:about=\"mc-cjn38t3dk0002yv8pfjjzf26j\">\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdCountType\"/>\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
+      "          <rdfs:isDefinedBy rdf:resource=\"\"/>\n",
+      "        </rdfs:Class>\n",
+      "      </xs:appinfo>\n",
+      "    </xs:annotation>\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdCountType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"Widgets Count\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"act\" type=\"xs:string\" default=\"\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" ref=\"s3m:ExceptionalValue\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vtb\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vte\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"tr\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"modified\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"latitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"longitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='0' name='magnitude-status' type='s3m:MagnitudeStatus'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='error'  type='xs:int' default='0'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='accuracy' type='xs:int' default='0'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1'  name='xdcount-value'>\n",
+      "            <xs:simpleType>\n",
+      "            <xs:restriction base='xs:int'>\n",
+      "            </xs:restriction>\n",
+      "            </xs:simpleType>\n",
+      "          </xs:element>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='xdcount-units' type='s3m:mc-cjn38t3dh0000yv8p7vkaicfh'/> \n",
+      "          </xs:sequence>\n",
+      "        </xs:restriction>\n",
+      "      </xs:complexContent>\n",
+      "    </xs:complexType>\n",
+      "\n",
+      "  <xs:element name=\"ms-cjn38t3dh0000yv8p7vkaicfh\" type=\"s3m:mc-cjn38t3dh0000yv8p7vkaicfh\"/>\n",
+      "  <xs:complexType name=\"mc-cjn38t3dh0000yv8p7vkaicfh\">\n",
+      "    <xs:annotation>\n",
+      "      <xs:documentation>\n",
+      "        Flag the number of widgets by individuals, dozens or cases.\n",
+      "\n",
+      "Definition: https%3A//s3model.com/widget/units\n",
+      "      </xs:documentation>\n",
+      "      <xs:appinfo>\n",
+      "        <rdfs:Class rdf:about=\"mc-cjn38t3dh0000yv8p7vkaicfh\">\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdStringType\"/>\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
+      "          <rdfs:isDefinedBy rdf:resource=\"https%3A//s3model.com/widget/units\"/>\n",
+      "        </rdfs:Class>\n",
+      "      </xs:appinfo>\n",
+      "    </xs:annotation>\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdStringType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"Widgets Units\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"act\" type=\"xs:string\" default=\"\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" ref=\"s3m:ExceptionalValue\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vtb\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vte\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"tr\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"modified\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"latitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"longitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='xdstring-value' type='xs:string'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='1' name='xdstring-value'>\n",
+      "              <xs:simpleType>\n",
+      "                <xs:restriction base='xs:string'>\n",
+      "                  <xs:enumeration value='individuals'>\n",
+      "                  <xs:annotation>\n",
+      "                    <xs:appinfo>\n",
+      "                      <rdfs:Class rdf:about='mc-cjn38t3dh0000yv8p7vkaicfh/xdstring-value/individuals'>\n",
+      "                        <rdfs:subPropertyOf rdf:resource='mc-cjn38t3dh0000yv8p7vkaicfh'/>\n",
+      "                        <rdfs:label>individuals</rdfs:label>\n",
+      "                        <rdfs:isDefinedBy>https://s3model.com/widget/units#individuals</rdfs:isDefinedBy>\n",
+      "                      </rdfs:Class>\n",
+      "                    </xs:appinfo>\n",
+      "                  </xs:annotation>\n",
+      "                  </xs:enumeration>\n",
+      "                  <xs:enumeration value='dozens'>\n",
+      "                  <xs:annotation>\n",
+      "                    <xs:appinfo>\n",
+      "                      <rdfs:Class rdf:about='mc-cjn38t3dh0000yv8p7vkaicfh/xdstring-value/dozens'>\n",
+      "                        <rdfs:subPropertyOf rdf:resource='mc-cjn38t3dh0000yv8p7vkaicfh'/>\n",
+      "                        <rdfs:label>dozens</rdfs:label>\n",
+      "                        <rdfs:isDefinedBy>https://s3model.com/widget/units#dozens</rdfs:isDefinedBy>\n",
+      "                      </rdfs:Class>\n",
+      "                    </xs:appinfo>\n",
+      "                  </xs:annotation>\n",
+      "                  </xs:enumeration>\n",
+      "                  <xs:enumeration value='cases'>\n",
+      "                  <xs:annotation>\n",
+      "                    <xs:appinfo>\n",
+      "                      <rdfs:Class rdf:about='mc-cjn38t3dh0000yv8p7vkaicfh/xdstring-value/cases'>\n",
+      "                        <rdfs:subPropertyOf rdf:resource='mc-cjn38t3dh0000yv8p7vkaicfh'/>\n",
+      "                        <rdfs:label>cases</rdfs:label>\n",
+      "                        <rdfs:isDefinedBy>https://s3model.com/widget/units#cases</rdfs:isDefinedBy>\n",
+      "                      </rdfs:Class>\n",
+      "                    </xs:appinfo>\n",
+      "                  </xs:annotation>\n",
+      "                  </xs:enumeration>\n",
+      "                </xs:restriction>\n",
+      "              </xs:simpleType>\n",
+      "            </xs:element>\n",
+      "          <xs:element maxOccurs='1' minOccurs='0' name='xdstring-language' type='xs:language' default=''/>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.asXSD())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The shareable model is quite large and carries a lot of information. That information is only recorded one time and allows for small data instances. We have the option to not include the *error* and *accuracy* elements if they do not fit our use case. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <ms-cjn38t3dk0002yv8pfjjzf26j>\n",
+      "    <label>Widgets Count</label>\n",
+      "    <error>0</error>\n",
+      "    <accuracy>0</accuracy>\n",
+      "    <xdcount-value>0</xdcount-value>\n",
+      "      <ms-cjn38t3dh0000yv8p7vkaicfh>\n",
+      "    <label>Widgets Units</label>\n",
+      "    <xdstring-value>individuals</xdstring-value>\n",
+      "  </ms-cjn38t3dh0000yv8p7vkaicfh>\n",
+      "    </ms-cjn38t3dk0002yv8pfjjzf26j>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(d.asXML())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additional constraints\n",
+    "Much of the time we will want to build models that have min/max values or restrict the total number of digits. \n",
+    "The next examples cover those use cases."
    ]
   },
   {
@@ -302,10 +518,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "print(d.asXML())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
