Add new examples.

--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -85,7 +85,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. [XdCountType](XdCount%20Examples.ipynb)"
+    "6. [XdCountType](XdCount%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. [XdQuantityType](XdQuantity%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. [XdFloatType](XdFloat%20Examples.ipynb)"
    ]
   },
   {
